fix for mobile getting cut off by icons

--- a/src/components/CdCase/cdCase.css
+++ b/src/components/CdCase/cdCase.css
@@ -32,6 +32,8 @@
 @media (max-width: 500px) {
 	.artwork-container {
 		flex-direction: column;
+		width: 70vw;
+
 	}
 
 	.album-art {
